# clean-hotel

./: package-lock.json  package.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/: app.css  app.html
frontend/src/routes/: +layout.svelte
frontend/src/routes/(app)/: +layout.svelte
frontend/src/routes/(app)/login/: +page.svelte
frontend/src/routes/(hotel)/hotel/: +page.svelte
rust/: Cargo.toml
src/: App.vue  main.rs
src/router/: index.ts
src/views/: Login.vue
ui/src/routes/: +page.svelte
ui/src/routes/login/: +page.svelte
ui/src/routes/register/: +page.svelte
v/: README.md
v/src/views/: AccountView.vue  RegisterView.vue
