[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.10"
bb8 = "0.8.0"
bb8-postgres = "0.8.1"
serde = { version = "1.0.154", features = [ "derive" ] }
tokio = { version = "1.26.0", features = [ "full" ] }
tokio-postgres = "0.7.7"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = "1.3.0"
